--- a/game/index.html
+++ b/game/index.html
@@ -6,19 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snakes and Ladders</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="game-frame">
         <div class="dice-frame">
-
+            <div class="text">
+                <h3><b>Player 1</b></h3>
+            </div>
+            <img src="img/dice-01.svg" id="dice-01" class="dice" alt="">
+            <div>
+                <button class="btn">Roll The Dice</button>
+            </div>
         </div>
         <div class="board">
             <div class="box"></div>
 
         </div>
-
+        <div class="dice-frame">
+            <div class="text">
+                <h3><b>Player 2</b></h3>
+            </div>
+            <img src="img/dice-01.svg" id="dice-02" class="dice" alt="">
+            <div>
+                <button class="btn">Roll The Dice</button>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
