--- a/game/index.html
+++ b/game/index.html
@@ -18,9 +18,10 @@
             </div>
             <img src="img/dice-01.svg" id="dice-01" class="dice" alt="">
             <div>
-                <button class="btn">Roll The Dice</button>
+                <button class="btn" id="btn1">Roll The Dice</button>
             </div>
         </div>
+
         <div class="board">
             <div class="box"></div>
 
@@ -31,7 +32,7 @@
             </div>
             <img src="img/dice-01.svg" id="dice-02" class="dice" alt="">
             <div>
-                <button class="btn">Roll The Dice</button>
+                <button class="btn" id="btn2">Roll The Dice</button>
             </div>
         </div>
     </div>
