--- a/game/index.html
+++ b/game/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="game-frame">
         <div class="dice-frame">
-            <div class="text">
+            <div class="text1">
                 <h3><b>Player 1</b></h3>
             </div>
             <img src="img/dice-01.svg" id="dice-01" class="dice" alt="">
@@ -26,8 +26,8 @@
             <div class="box"></div>
 
         </div>
-        <div class="dice-frame">
-            <div class="text">
+        <div class="dice-frame" id="frame2">
+            <div class="text2">
                 <h3><b>Player 2</b></h3>
             </div>
             <img src="img/dice-01.svg" id="dice-02" class="dice" alt="">
