--- a/index.html
+++ b/index.html
@@ -16,22 +16,26 @@
             <div class="text1">
                 <h3><b>Player 1</b></h3>
             </div>
-            <img src="img/dice-01.svg" id="dice-01" class="dice" alt="">
-            <div>
+            <div class="dice">
+                <img src="img/dice-01.svg" id="dice-01" alt="">
+            </div>
+            <div class="btn-box">
                 <button class="btn" id="btn1">Roll The Dice</button>
             </div>
         </div>
 
         <div class="board">
-            <div class="box"></div>
+            <img src="img/board.jpg" alt="">
         </div>
 
         <div class="dice-frame" id="frame2">
             <div class="text2">
                 <h3><b>Player 2</b></h3>
             </div>
-            <img src="img/dice-01.svg" id="dice-02" class="dice" alt="">
-            <div>
+            <div class="dice">
+                <img src="img/dice-01.svg" id="dice-02" alt="">
+            </div>
+            <div class="btn-box">
                 <button class="btn" id="btn2">Roll The Dice</button>
             </div>
         </div>
