Added dice control and custom msg box

--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
                 <button class="btn" id="btn2">Roll The Dice</button>
             </div>
         </div>
+        <div class="msg-box" id="pl1">
+            <p>Player 1 is the winner!</p>
+            <button class="ok-btn">OK</button>
+        </div>
+        <div class="msg-box" id="pl2">
+            <p>Player 2 is the winner!</p>
+            <button class="ok-btn">OK</button>
+        </div>
     </div>
+
+
     <script src="script.js"></script>
 </body>
 
