--- a/hvc.html
+++ b/hvc.html
@@ -13,12 +13,12 @@
 <body>
     <div class="game-frame">
         <div class="switch">
-            <a href="hvc.html"><button class="switch-btn"><b>Switch Mode</b></button></a>
+            <a href="index.html"><button class="switch-btn"><b>Switch Mode</b></button></a>
         </div>
 
         <div class="dice-frame">
             <div class="text1">
-                <h3><b>Player 1</b></h3>
+                <h3><b>Human</b></h3>
             </div>
             <div class="dice">
                 <img src="img/dice-01.svg" id="dice-01" alt="">
@@ -34,26 +34,26 @@
 
         <div class="dice-frame" id="frame2">
             <div class="text2">
-                <h3><b>Player 2</b></h3>
+                <h3><b>Computer</b></h3>
             </div>
             <div class="dice">
                 <img src="img/dice-01.svg" id="dice-02" alt="">
             </div>
             <div class="btn-box">
-                <button class="btn" id="btn2">Roll The Dice</button>
+                <button disabled class="btn btn-dis" id="btn2">Roll The Dice</button>
             </div>
         </div>
         <div class="msg-box" id="pl1">
-            <p>Player 1 is the winner!</p>
+            <p>Human is the winner!</p>
             <button class="ok-btn">OK</button>
         </div>
         <div class="msg-box" id="pl2">
-            <p>Player 2 is the winner!</p>
+            <p>Computer is the winner!</p>
             <button class="ok-btn">OK</button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="scripthvc.js"></script>
 </body>
 
 </html>
