Minor button text change

--- a/hvc.html
+++ b/hvc.html
@@ -40,7 +40,7 @@
                 <img src="img/dice-01.svg" id="dice-02" alt="">
             </div>
             <div class="btn-box">
-                <button disabled class="btn btn-dis" id="btn2">Roll The Dice</button>
+                <button disabled class="btn btn-dis" id="btn2">Turn of PC</button>
             </div>
         </div>
         <div class="msg-box" id="pl1">
