Added proper name in-game, removed some redundant audio files

--- a/aerialassault-abishek/index.html
+++ b/aerialassault-abishek/index.html
@@ -18,7 +18,7 @@
     <!-- Start menu -->
     <div id="start-screen" class="screen">
       <div class="container">
-        <div class="title">GENERIC TITLE</div>
+        <div class="title">AERIAL ASSAULT</div>
         <div class="button-section">
         <div class="play">
             <button id="play-button">PLAY</button>
