Fixed file ordering which caused images to not load

--- a/aerialassault-abishek/index.html
+++ b/aerialassault-abishek/index.html
@@ -39,17 +39,17 @@
       </div>
     </div>
     <canvas id="main-canvas"></canvas>
-    <img src="/images/1.png" alt="" class="background-image" />
-    <img src="/images/2.png" alt="" class="background-image" />
-    <img src="/images/3.png" alt="" class="background-image" />
-    <img src="/images/4.png" alt="" class="background-image" />
-    <img src="/images/rocket.png" alt="" id="player-image" />
-    <img src="/images/black-rocket.png" alt="" id="enemy-image" />
-    <img src="/images/bullet.svg" alt="" id="bullet" />
-    <img src="/images/shroom-smol.png" alt="" id="invincible" />
-    <img src="/images/final-bolt.png" alt="" id="speed-up">
-    <img src="/images/final-death-image.png" alt="" id="enemy-image-death" />
-    <img src="/images/white-rocket.png" alt="" id="invincible-player">
+    <img src="1.png" alt="" class="background-image" />
+    <img src="2.png" alt="" class="background-image" />
+    <img src="3.png" alt="" class="background-image" />
+    <img src="4.png" alt="" class="background-image" />
+    <img src="rocket.png" alt="" id="player-image" />
+    <img src="black-rocket.png" alt="" id="enemy-image" />
+    <img src="bullet.svg" alt="" id="bullet" />
+    <img src="shroom-smol.png" alt="" id="invincible" />
+    <img src="final-bolt.png" alt="" id="speed-up">
+    <img src="final-death-image.png" alt="" id="enemy-image-death" />
+    <img src="white-rocket.png" alt="" id="invincible-player">
     <audio src="audio/actual-bgm.wav" id="bgm"></audio>
     <audio src="audio/enemy-death.wav" id="enemy-death"></audio>
     <audio src="audio/player-death.wav" id="player-death"></audio>
