--- a/CircleNinja-Pranav/index.html
+++ b/CircleNinja-Pranav/index.html
@@ -37,7 +37,7 @@
         <p>GameFinished</p>
         <p class = "final-score">Your score was: 0</p>
        <button class = "home">Go to home</button>
-       <button class = "start-game-again">Restart the Game</button>
+       <button class = "start-game-again no-select">Restart the Game</button>
     </div>
     <script src="script.js"></script>
 </body>
