added restart button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </p>
       </div>
       <div class="gameArea hide">hello</div>
+      <div class="endscreen hide"></div>
     </div>
     <script src="script.js"></script>
   </body>
