Tweaked indestructible enemy spawning and speed behaviour, added new time freeze powerup

--- a/aerialassault-abishek/index.html
+++ b/aerialassault-abishek/index.html
@@ -50,6 +50,7 @@
     <img src="final-bolt.png" alt="" id="speed-up">
     <img src="final-death-image.png" alt="" id="enemy-image-death" />
     <img src="white-rocket.png" alt="" id="invincible-player">
+    <img src="clock-final.png" alt="" id="timer-pickup">
     <audio src="audio/actual-bgm.wav" id="bgm"></audio>
     <audio src="audio/enemy-death.wav" id="enemy-death"></audio>
     <audio src="audio/player-death.wav" id="player-death"></audio>
