--- a/CircleNinja-Pranav/index.html
+++ b/CircleNinja-Pranav/index.html
@@ -33,6 +33,7 @@
     <div class = "game-canvas" hidden = "hidden">
         <button class = "end-game no-select">End Game</button>
        <center><p class = "score no-select">Score : 0</p></center>
+       <p class = "lives">Lives Remaining: 3</p>
         
         <canvas id="canvas" width="2000" height="1500"></canvas>
     </div>
